Bug 995745 - Use LockPixels for WebGL readback directly into a DrawTarget instead of writing to an immutable snapshot. r=mattwoodrow